src/objects/Processing_Application_Review__c.object
<CustomObject>
    <fields>
        <fullName>No_Loss_Verification_Issues__c</fullName>
        <description>No issue noted on LV report (comes from LV - “Eligibility Issue” box on LV form)</description>
        <inlineHelpText>No issue noted on LV report (comes from LV - “Eligibility Issue” box on LV form)</inlineHelpText>
        <label>No Loss Verification Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Other_Assistance_Received_from_FEMA__c</fullName>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <inlineHelpText>No other Assistance received for &quot;&quot;Miscellaneous&quot;&quot; from FEMA</inlineHelpText>
        <label>No Other Assistance Received from FEMA</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_Owned_By_Fed_State_or_Local_Gov__c</fullName>
        <label>Not Owned By Fed, State or Local Gov</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_an_SBA_Employee__c</fullName>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <label>Not an SBA Employee</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_in_Injury_Period__c</fullName>
        <label>Number of Months in Injury Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pass_Fail__c</fullName>
        <label>Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <description>Phase 1 - Gross Margin Analysis - &quot;Period&quot;</description>
        <inlineHelpText>Phase 1 - Gross Margin Analysis - &quot;Period&quot;</inlineHelpText>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Residence__c</fullName>
        <description>Primary residence checked &quot;YES&quot; on the application</description>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <label>Primary Residence</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Principal_Amount__c</fullName>
        <description>This field is used for display purposes only, visible in the Repayment Test section, which displays all data points used to run the Repayment Eligibility Test.</description>
        <formula>Application__r.Principal_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Eligibility_Test_Comments__c</fullName>
        <label>Property Eligibility Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Eligibility_Test_Time__c</fullName>
        <label>Property Eligibility Test- Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Property_Eligibility_Test__c</fullName>
        <formula>IF(AND( 
ISPICKVAL(Damaged_Property_Owned_by_Applicants__c, &quot;Pass&quot;), 
ISPICKVAL(Primary_Residence__c , &quot;Pass&quot;), 
ISPICKVAL(Damaged_Address_IRS_CBR_Match__c ,&quot;Pass&quot;), 
ISPICKVAL(NEMIS_Primary__c , &quot;Pass&quot;), 
ISPICKVAL(Property_NIFRA_Compliant__c , &quot;Pass&quot;), 
ISPICKVAL(Sanctioned_Community__c , &quot;Pass&quot;), 
ISPICKVAL(CBRA_or_OPA__c , &quot;Pass&quot;), 
ISPICKVAL(Damaged_Property_Type_Eligibility__c , &quot;Pass&quot;)), 

&quot;Pass&quot;, 

IF(AND( 
OR(ISPICKVAL(Damaged_Property_Owned_by_Applicants__c, &quot;Pass&quot;), ISPICKVAL(Damaged_Property_Owned_by_Applicants__c, &quot;Mitigated&quot;)), 
OR(ISPICKVAL(Primary_Residence__c , &quot;Pass&quot;), ISPICKVAL(Primary_Residence__c , &quot;Mitigated&quot;)), 
OR(ISPICKVAL(Damaged_Address_IRS_CBR_Match__c ,&quot;Pass&quot;), ISPICKVAL(Damaged_Address_IRS_CBR_Match__c ,&quot;Mitigated&quot;)), 
OR(ISPICKVAL(NEMIS_Primary__c , &quot;Pass&quot;), ISPICKVAL(NEMIS_Primary__c , &quot;Mitigated&quot;)), 
OR(ISPICKVAL(Property_NIFRA_Compliant__c , &quot;Pass&quot;), ISPICKVAL(Property_NIFRA_Compliant__c , &quot;Mitigated&quot;)), 
OR(ISPICKVAL(Sanctioned_Community__c , &quot;Pass&quot;), ISPICKVAL(Sanctioned_Community__c , &quot;Mitigated&quot;)), 
OR(ISPICKVAL(CBRA_or_OPA__c , &quot;Pass&quot;), ISPICKVAL(CBRA_or_OPA__c , &quot;Mitigated&quot;)), 
OR(ISPICKVAL(Damaged_Property_Type_Eligibility__c , &quot;Pass&quot;), ISPICKVAL(Damaged_Property_Type_Eligibility__c , &quot;Mitigated&quot;))), 

&quot;Mitigated&quot;, 

&quot;Fail&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Eligibility Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_NIFRA_Compliant__c</fullName>
        <description>Property is NFIRA compliant</description>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <inlineHelpText>Property is NFIRA compliant</inlineHelpText>
        <label>Property NIFRA Compliant</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Loan_Amount_Lesser_of_a_b__c</fullName>
        <formula>IF(
    AND(
        ISBLANK(Net_of_Recoveries__c),
        ISBLANK(Maximum_Loan_Amount__c)
    ),
    NULL,
    IF(
        Net_of_Recoveries__c &gt; Maximum_Loan_Amount__c,
        Net_of_Recoveries__c,
        Maximum_Loan_Amount__c)
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Loan Amount (Lesser of a/b)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Loan_Amount__c</fullName>
        <formula>Gross_Margin_3__c -  Business_Interruption_Insurance_Recovery__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Re_consideration_Re_acceptance_Reqs__c</fullName>
        <inlineHelpText>Additional Reconsideration or Reacceptance Requirements</inlineHelpText>
        <label>Re-consideration/Re-acceptance Reqs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Re_run_Collateral_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-run Collateral Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_run_Credit_Analysis_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-run Credit Analysis Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_run_Eligibility_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-run Eligibility Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_run_Refinancing_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-run Refinancing Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_run_Repayment_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-run Repayment Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Landscape_Limit__c</fullName>
        <defaultValue>5000</defaultValue>
        <label>Real Estate Landscape Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Loss_Limit__c</fullName>
        <defaultValue>2000000</defaultValue>
        <label>Real Estate Loss Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_Code_for_Recommendation__c</fullName>
        <label>Reason Code for Recommendation</label>
        <picklist>
            <controllingField>Loan_Officer_Recommendation__c</controllingField>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 Requested information was not furnished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52 Applicant’s Request – A change in plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54 Applicant’s Request – Due to availability of insurance or other recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56A Unable to verify property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56B Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57 Consolidation of multiple applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>58 Consolidation of related applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59 IRS has no record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60a Character Eligibility Determination – Withdrawal of an otherwise approvable application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60w Character Eligibility Determination – Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61 Applicant’s Request Due to market rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66 Military Reserve EIDL – Official Call-Up Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Lack of repayment ability - Applicant&apos;s income below minimum income level for the family size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 Lack of repayment ability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 Unsatisfactory history on an existing or previous SBA loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 Unsatisfactory history on a Federal obligation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 Unsatisfactory credit history</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 Unsatisfactory debt payment history</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 No disaster-related damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35A - Not located in the declared disaster area – Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 Ineligible real property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37 Ineligible personal property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38 Not eligible due to recoveries from other sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39A Not eligible due to failure to maintain flood insurance coverage on an existing SBA loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39C Not eligible due to failure to maintain required flood insurance as directed by the Federal Emergency Management Agency (FEMA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41 Refusal to pledge available collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42 Not eligible due to delinquent child support payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43 Not eligible due to character reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44I Lack of repayment ability – Below minimum income level for the family size based upon the applicant&apos;s income alone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Recommended_SBA_Payment__c</fullName>
        <label>Recommended SBA Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refinancing_Eligibility__c</fullName>
        <formula>&quot;Pass&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refinancing Eligibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refinancing_Test_Comments__c</fullName>
        <label>Refinancing Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refinancing_Test_Result_Date__c</fullName>
        <label>Refinancing Eligibility Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refinancing_Test_Results__c</fullName>
        <label>Refinancing Test Results</label>
        <picklist>
            <picklistValues>
                <fullName>PASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rel_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rel_Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Underwriting</relationshipLabel>
        <relationshipName>Processing_Application_Review2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Processing Application Review (Related Application)</relationshipLabel>
        <relationshipName>Processing_Application_Review1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental_Income_Loss__c</fullName>
        <label>Rental Income Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repayment_Test_Comments__c</fullName>
        <label>Repayment Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repayment_Test_Result_Date__c</fullName>
        <description>Date/Time when Repayment Test Result was completed</description>
        <inlineHelpText>Date/Time when Repayment Test Result was completed</inlineHelpText>
        <label>Repayment Test Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Repayment_Test_Status__c</fullName>
        <description>Formula field will display a Red Flag if the test result status is Failed; Yellow Flag if Mitigated.</description>
        <formula>IF(

ISPICKVAL( Repayment_Test__c , &quot;Fail&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;), 

IF(ISPICKVAL( Repayment_Test__c, &quot;Mitigated&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow Flag&quot;), 

NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repayment Test Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repayment_Test__c</fullName>
        <label>Repayment Test</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sanctioned_Community__c</fullName>
        <description>Property is not in a sanctioned community and SFHA</description>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <inlineHelpText>Property is not in a sanctioned community and SFHA</inlineHelpText>
        <label>Sanctioned Community</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of the Financial Data</description>
        <inlineHelpText>Source of the Financial Data</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>FTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Flag__c</fullName>
        <label>System Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FALSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Collateral Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception (stop process)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TANW_100_000__c</fullName>
        <label>TANW (-) $100,000</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Payment_1_3_Total_Income__c</fullName>
        <formula>Cash_Available_Total__c  / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Payment - 1/3 Total Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Lead_Approver__c</fullName>
        <description>This field Captures the decision maker from the Team Lead team</description>
        <inlineHelpText>This field Captures the decision maker from the Team Lead team</inlineHelpText>
        <label>Team Lead Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Adjusted_Net_Worth__c</fullName>
        <formula>Adjusted_Net_Worth_Affiliates__c  +  Adjusted_Net_Worth_Applicant__c  +  Adjusted_Net_Worth_Individuals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Adjusted Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contents_Uncompensated_Loss__c</fullName>
        <label>Total Contents Uncompensated Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_Physical_Loss_Cont_Motor__c</fullName>
        <label>Total Eligible Physical Loss Cont/Motor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_Physical_Loss_Real_Estate__c</fullName>
        <label>Total Eligible Physical Loss Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_Physical_Loss__c</fullName>
        <label>Total Eligible Physical Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Motor_Vehicle_Uncompensated_Loss__c</fullName>
        <label>Total Motor Vehicle Uncompensated Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Real_Estate_Other__c</fullName>
        <label>Total Real Estate (Other)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Real_Estate_Repair_Replace__c</fullName>
        <label>Total Real Estate (Repair/Replace)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Real_Estate_Uncompensated_Loss__c</fullName>
        <label>Total Real Estate Uncompensated Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Uncompensated_Physical_Loss__c</fullName>
        <label>Total Uncompensated Physical Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>U_S_Citizen__c</fullName>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <inlineHelpText>Is applicant an United States citizen?</inlineHelpText>
        <label>U.S. Citizen</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uncompensated_Total_Loss__c</fullName>
        <label>Uncompensated Total Loss	$$$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>trigger_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>trigger Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <label>Processing Application Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Eligibility_Test__c</columns>
        <columns>Collateral_Test__c</columns>
        <columns>Refinancing_Test_Results__c</columns>
        <columns>Repayment_Test__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Credit_Elsewhere_Test__c</columns>
        <columns>Credit_Score_Test__c</columns>
        <columns>Cash_Flow_Test__c</columns>
        <columns>Asset_Test_Result__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Application Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processing Application Review</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exception_Tests</fullName>
        <active>true</active>
        <label>Exception Tests</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Underwriting</fullName>
        <active>true</active>
        <label>Underwriting</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Desc_is_required_for_other_reason_code</fullName>
        <active>true</active>
        <description>Detailed description field is required for 56B-other and 46D- other reason codes</description>
        <errorConditionFormula>(Includes(  Reason_Code_for_Recommendation__c ,&apos;46D Other&apos;) ||
Includes( Reason_Code_for_Recommendation__c ,&apos;56B Other&apos;)) &amp;&amp;
 ISBLANK( Detailed_Description_for_the_Reason_Code__c )</errorConditionFormula>
        <errorDisplayField>Detailed_Description_for_the_Reason_Code__c</errorDisplayField>
        <errorMessage>Please provide detailed description for selecting &quot;Other&quot; as the Decline/withdraw Reason code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Officer_Team_Lead_Fail_to_Mitigate</fullName>
        <active>true</active>
        <description>The Loan Officer or Team Lead must have an access to manually turn the result of “Fail” to “Mitigate” while conducting
underwriting analysis</description>
        <errorConditionFormula>AND(OR($Profile.Name = &quot;AP Team Lead&quot;, $Profile.Name = &quot;AP Loan Officer&quot;),
OR( 
ISCHANGED(Condo_HOA_fee_not_listed_on_Application__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Condo_HOA_fee_not_listed_on_Application__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(Condo_HOA_fee_not_listed_on_Application__c,&quot;Mitigated&quot;)), 
ISCHANGED(Grants_not_listed_on_application__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Grants_not_listed_on_application__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(Grants_not_listed_on_application__c ,&quot;Mitigated&quot;)), 
ISCHANGED(IRS_Transcript_s_Received__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(IRS_Transcript_s_Received__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(IRS_Transcript_s_Received__c ,&quot;Mitigated&quot;)), 
ISCHANGED(Not_an_SBA_Employee__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Not_an_SBA_Employee__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(Not_an_SBA_Employee__c ,&quot;Mitigated&quot;)), 

ISCHANGED(U_S_Citizen__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(U_S_Citizen__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(U_S_Citizen__c ,&quot;Mitigated&quot;)), 
ISCHANGED(No_Character_Issues__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(No_Character_Issues__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(No_Character_Issues__c ,&quot;Mitigated&quot;)), 

ISCHANGED(Damaged_Property_Owned_by_Applicants__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Damaged_Property_Owned_by_Applicants__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(Damaged_Property_Owned_by_Applicants__c ,&quot;Mitigated&quot;)), 
ISCHANGED(Primary_Residence__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Primary_Residence__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(Primary_Residence__c ,&quot;Mitigated&quot;)), 
ISCHANGED(Damaged_Address_IRS_CBR_Match__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Damaged_Address_IRS_CBR_Match__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(Damaged_Address_IRS_CBR_Match__c ,&quot;Mitigated&quot;)), 
ISCHANGED(NEMIS_Primary__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(NEMIS_Primary__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(NEMIS_Primary__c ,&quot;Mitigated&quot;)), 
ISCHANGED(Sanctioned_Community__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Sanctioned_Community__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(Sanctioned_Community__c ,&quot;Mitigated&quot;)), 
ISCHANGED(CBRA_or_OPA__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(CBRA_or_OPA__c ),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL(CBRA_or_OPA__c ,&quot;Mitigated&quot;)), 
ISCHANGED(Damaged_Property_Type_Eligibility__c) &amp;&amp; ISPICKVAL(PRIORVALUE( Damaged_Property_Type_Eligibility__c),&quot;Fail&quot;) &amp;&amp; NOT(ISPICKVAL( Damaged_Property_Type_Eligibility__c,&quot;Mitigated&quot;)) 
)
)</errorConditionFormula>
        <errorMessage>You can not change a failed field to that value.  Loan Officers and Team Leads can only change failed fields to mitigated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Officer_Team_Lead_Passing_result</fullName>
        <active>true</active>
        <description>Loan officers and Team Leads can not change values from a &apos;Pass&apos; to anything else.</description>
        <errorConditionFormula>AND(OR($Profile.Name = &quot;AP Team Lead&quot;, $Profile.Name = &quot;AP Loan Officer&quot;),
OR( 
ISCHANGED(Condo_HOA_fee_not_listed_on_Application__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Condo_HOA_fee_not_listed_on_Application__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(Condo_HOA_fee_not_listed_on_Application__c,&quot;Pass&quot;)), 
ISCHANGED(Grants_not_listed_on_application__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Grants_not_listed_on_application__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(Grants_not_listed_on_application__c ,&quot;Pass&quot;)), 
ISCHANGED(IRS_Transcript_s_Received__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(IRS_Transcript_s_Received__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(IRS_Transcript_s_Received__c ,&quot;Pass&quot;)), 
ISCHANGED(Not_an_SBA_Employee__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Not_an_SBA_Employee__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(Not_an_SBA_Employee__c ,&quot;Pass&quot;)), 

ISCHANGED(U_S_Citizen__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(U_S_Citizen__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(U_S_Citizen__c ,&quot;Pass&quot;)), 
ISCHANGED(No_Character_Issues__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(No_Character_Issues__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(No_Character_Issues__c ,&quot;Pass&quot;)), 

ISCHANGED(Damaged_Property_Owned_by_Applicants__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Damaged_Property_Owned_by_Applicants__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(Damaged_Property_Owned_by_Applicants__c ,&quot;Pass&quot;)), 
ISCHANGED(Primary_Residence__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Primary_Residence__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(Primary_Residence__c ,&quot;Pass&quot;)), 
ISCHANGED(Damaged_Address_IRS_CBR_Match__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Damaged_Address_IRS_CBR_Match__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(Damaged_Address_IRS_CBR_Match__c ,&quot;Pass&quot;)), 
ISCHANGED(NEMIS_Primary__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(NEMIS_Primary__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(NEMIS_Primary__c ,&quot;Pass&quot;)), 
ISCHANGED(Sanctioned_Community__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(Sanctioned_Community__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(Sanctioned_Community__c ,&quot;Pass&quot;)), 
ISCHANGED(CBRA_or_OPA__c ) &amp;&amp; ISPICKVAL(PRIORVALUE(CBRA_or_OPA__c ),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL(CBRA_or_OPA__c ,&quot;Pass&quot;)), 
ISCHANGED(Damaged_Property_Type_Eligibility__c) &amp;&amp; ISPICKVAL(PRIORVALUE( Damaged_Property_Type_Eligibility__c),&quot;Pass&quot;) &amp;&amp; NOT(ISPICKVAL( Damaged_Property_Type_Eligibility__c,&quot;Pass&quot;)) 
)
)</errorConditionFormula>
        <errorMessage>You can not change fields with a passing result.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Code_required_if_decline_withdraw</fullName>
        <active>true</active>
        <description>The Loan officer must assign one or more reason codes for the recommendation of “Withdraw or Decline.</description>
        <errorConditionFormula>(ISPICKVAL( Loan_Officer_Recommendation__c ,&quot;Decline&quot;) ||  ISPICKVAL( Loan_Officer_Recommendation__c ,&quot;Withdraw&quot;))&amp;&amp;  ISBLANK( Reason_Code_for_Recommendation__c )</errorConditionFormula>
        <errorDisplayField>Reason_Code_for_Recommendation__c</errorDisplayField>
        <errorMessage>Please select at least one Reason for your recommendation.</errorMessage>
    </validationRules>
</CustomObject>